--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -24,10 +24,10 @@
                 <input type="text" class="form-control" placeholder="用户名" name="username"/>
             </div>
             <div class="loginbox-textbox">
-                <input type="text" class="form-control" placeholder="密码" name="password"/>
+                <input type="password" class="form-control" placeholder="密码" name="password"/>
             </div>
             <div class="loginbox-forgot">
-                <a href="">忘记密码?</a>
+                <a href="{:url('admin/index/reset')}">忘记密码?</a>
             </div>
             <div class="loginbox-submit">
                 <input type="button" class="btn btn-primary btn-block" id="login" value="Login">
