--- a/application/admin/view/public/_menu.html
+++ b/application/admin/view/public/_menu.html
@@ -53,12 +53,12 @@
             </a>
             <ul class="submenu">
                 <li>
-                    <a href="#">
+                    <a href="{:url('admin/member/lst')}">
                         <span class="menu-text">会员列表</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{:url('admin/member/add')}">
                         <span class="menu-text">会员添加</span>
                     </a>
                 </li>
@@ -72,12 +72,12 @@
             </a>
             <ul class="submenu">
                 <li>
-                    <a href="#">
+                    <a href="{:url('admin/admin/lst')}">
                         <span class="menu-text">管理员列表</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{:url('admin/admin/add')}">
                         <span class="menu-text">管理员添加</span>
                     </a>
                 </li>
