--- a/application/admin/view/article/edit.html
+++ b/application/admin/view/article/edit.html
@@ -39,6 +39,12 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
+                                        <label for="author" class="control-label col-sm-2">作者</label>
+                                        <div class="col-sm-2">
+                                            <input type="text" class="form-control" id="author" name="author" placeholder="作者" value="{$articleInfo.author}"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
                                         <label for="tags" class="control-label col-sm-2">标签</label>
                                         <div class="col-sm-4">
                                             <input type="text" class="form-control" id="tags" name="tags" placeholder="标签"  value="{$articleInfo.tags}"/>
