--- a/application/admin/view/article/lst.html
+++ b/application/admin/view/article/lst.html
@@ -38,6 +38,7 @@
                                     <tr>
                                         <th>ID</th>
                                         <th>文章标题</th>
+                                        <th>作者</th>
                                         <th>所属栏目</th>
                                         <th>是否推荐</th>
                                         <th>操作</th>
@@ -47,6 +48,7 @@
                                     <tr id="article_tr_{$vo.id}">
                                         <td>{$vo.id}</td>
                                         <td>{$vo.title}</td>
+                                        <td>{$vo.author}</td>
                                         <td>{$vo.cate.catename}</td>
                                         <td>{if ($vo.is_top == 1)}已推荐{else /}未推荐{/if}</td>
                                         <td>
